--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
@@ -68,6 +71,8 @@ dependencies {
         // exclude Retrofit’s OkHttp peer-dependency module to use the module import above
         exclude module: 'okhttp'
     }
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Glide
     final GLIDE_VERSION = "4.10.0"
