--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     kapt("com.github.bumptech.glide:compiler:${GLIDE_VERSION}") {
         exclude group: 'com.android.support'
     }
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
+
 }
