--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,10 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
 
+    //Testing (MockK)
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
+
+
 }
